# ray-tracing

./: .gitignore  CMakeLists.txt  README.md  check.py  tests.py
include/glad/: glad.h
include/rt/: camera3d.hpp  math.hpp  scene3d.hpp
src/: camera3d.cpp  glad.cpp  main.cpp  math.cpp  scene3d.cpp
src/shaders/: cube.frag  cube.vert  line.frag  line.vert
